# esp32-ble-control-gui

./: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
public/: index.html  lib.wasm  lib.wasm.map  manifest.json
src/: App.scss  App.tsx  BleConnection.ts  ConfigParser.ts  ModelControl.tsx  index.scss  index.tsx
src/components/: BleConnect.scss  BleConnect.tsx  BleStateLabel.tsx  BleTerminal.scss  BleTerminal.tsx  CollapsibleCard.scss  CollapsibleCard.tsx  DebouncedSlider.scss  DebouncedSlider.tsx  EspImg.tsx  LedStringControl.scss  LedStringControl.tsx  Loader.tsx  LuaEditor.tsx  ModelSettings.tsx
src/components/BleOta/: BleOta.tsx  DataFlasher.tsx  FirmwareDiffer.tsx  FirmwareDownloader.tsx  FirmwareFlasher.tsx  FirmwareSelfTest.tsx
src/components/Ui/: LedControl.scss  LedControl.tsx  UiButton.tsx  UiCheckBox.tsx  UiMetricValue.tsx  UiSlider.tsx
src/i18n/: config.ts
wasm/: CMakeLists.txt  bsdiff.c  bsdiff.h  bsdiff_wasm.c  lib.c
wasm/heatshrink/: heatshrink_decoder.c
